--- a/LiveliGoods/LiveliGoods/Base.lproj/Main.storyboard
+++ b/LiveliGoods/LiveliGoods/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
             </objects>
             <point key="canvasLocation" x="-1392.3076923076922" y="-175.59241706161137"/>
         </scene>
-        <!--Food-->
+        <!--Food Input-->
         <scene sceneID="OmN-Hv-X6Z">
             <objects>
                 <viewController storyboardIdentifier="FoodInput" modalPresentationStyle="fullScreen" id="Nec-w5-L6b" customClass="FoodInput" customModule="LiveliGoods" customModuleProvider="target" sceneMemberID="viewController">
@@ -50,27 +50,53 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="NNX-Wb-7hN">
-                                <rect key="frame" x="0.0" y="148" width="390" height="613"/>
+                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="19q-HO-Amb">
+                                <rect key="frame" x="0.0" y="58" width="390" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="160" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="NNX-Wb-7hN">
+                                <rect key="frame" x="0.0" y="140" width="390" height="613"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="myCell" id="fC0-sA-dxb" customClass="CustomTableViewCell" customModule="LiveliGoods" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.666666030883789" width="390" height="43.666667938232422"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="myCell" rowHeight="160" id="fC0-sA-dxb" customClass="CustomTableViewCell" customModule="LiveliGoods" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.666666030883789" width="390" height="160"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fC0-sA-dxb" id="lPD-U4-vEh">
-                                            <rect key="frame" x="0.0" y="0.0" width="390" height="43.666667938232422"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="160"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vx2-KO-iX0">
-                                                    <rect key="frame" x="20" y="0.0" width="174" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vx2-KO-iX0" userLabel="FoodLabel">
+                                                    <rect key="frame" x="20" y="0.0" width="362" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kan-0q-BGT">
-                                                    <rect key="frame" x="20" y="22" width="174" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JhY-dG-H9p" userLabel="FatLabel">
+                                                    <rect key="frame" x="20" y="64" width="362" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CI5-jy-W4A" userLabel="CarbsLabel">
+                                                    <rect key="frame" x="20" y="88" width="362" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kan-0q-BGT" userLabel="ProteinLabel">
+                                                    <rect key="frame" x="20" y="106" width="362" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lhw-c2-zt6" userLabel="CalorieLabel">
+                                                    <rect key="frame" x="20" y="29" width="362" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -78,23 +104,22 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <rect key="contentStretch" x="0.0" y="1" width="1" height="1"/>
                                         <connections>
-                                            <outlet property="bigLabel" destination="Vx2-KO-iX0" id="Hn0-RW-uVW"/>
-                                            <outlet property="smallLabel" destination="Kan-0q-BGT" id="QtT-C3-2jc"/>
+                                            <outlet property="calorieLabel" destination="lhw-c2-zt6" id="NAg-iK-VpN"/>
+                                            <outlet property="carbsLabel" destination="CI5-jy-W4A" id="4jO-IG-e4i"/>
+                                            <outlet property="fatLabel" destination="JhY-dG-H9p" id="IKr-hN-6hx"/>
+                                            <outlet property="foodLabel" destination="Vx2-KO-iX0" id="Fmn-yS-eud"/>
+                                            <outlet property="proteinLabel" destination="Kan-0q-BGT" id="ntT-en-CCG"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="19q-HO-Amb">
-                                <rect key="frame" x="0.0" y="58" width="390" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="sr3-sN-Haf"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Food" image="list.dash.header.rectangle" catalog="system" id="XIC-5T-bta"/>
+                    <navigationItem key="navigationItem" id="nBv-en-fzN"/>
                     <connections>
                         <outlet property="searchBar" destination="19q-HO-Amb" id="3mm-1n-0fu"/>
                         <outlet property="tableView" destination="NNX-Wb-7hN" id="o06-Ow-Fcg"/>
@@ -102,7 +127,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Emc-hF-2ks" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-326.15384615384613" y="-176.30331753554501"/>
+            <point key="canvasLocation" x="736.92307692307691" y="143.60189573459715"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="RN4-18-aZO">
@@ -114,7 +139,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="Nec-w5-L6b" kind="relationship" relationship="viewControllers" id="hA6-mq-6LB"/>
+                        <segue destination="com-dh-clk" kind="relationship" relationship="viewControllers" id="hA6-mq-6LB"/>
                         <segue destination="4ig-Nl-0Yy" kind="relationship" relationship="viewControllers" id="GNw-Oe-9GU"/>
                         <segue destination="JiV-Wz-9Ly" kind="relationship" relationship="viewControllers" id="GDK-MD-8FY"/>
                     </connections>
@@ -156,7 +181,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QXA-Le-z1J" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="806" y="144"/>
+            <point key="canvasLocation" x="1733.8461538461538" y="143.60189573459715"/>
         </scene>
         <!--Steps-->
         <scene sceneID="sCt-Bj-ydK">
@@ -201,7 +226,26 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ccq-pg-xlz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1724.6153846153845" y="193.3649289099526"/>
+            <point key="canvasLocation" x="2653.8461538461538" y="193.3649289099526"/>
+        </scene>
+        <!--Food-->
+        <scene sceneID="pHX-Zd-w6s">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="com-dh-clk" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Food" image="list.dash.header.rectangle" catalog="system" id="XIC-5T-bta"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="FxJ-JT-zqP">
+                        <rect key="frame" x="0.0" y="44" width="390" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Nec-w5-L6b" kind="relationship" relationship="rootViewController" id="92Q-pj-zVI"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="egi-vW-dzi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-192.30769230769229" y="143.60189573459715"/>
         </scene>
     </scenes>
     <resources>
