--- a/LiveliGoods/LiveliGoods/Base.lproj/Main.storyboard
+++ b/LiveliGoods/LiveliGoods/Base.lproj/Main.storyboard
@@ -148,42 +148,40 @@
             </objects>
             <point key="canvasLocation" x="827" y="-621"/>
         </scene>
-        <!--Settings-->
+        <!--Steps-->
         <scene sceneID="7UC-H2-4uI">
             <objects>
-                <viewController id="4ig-Nl-0Yy" customClass="SettingsVC" customModule="LiveliGoods" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="4ig-Nl-0Yy" customClass="StepTracker" customModule="LiveliGoods" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="W9Z-03-eQt">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Qll-nR-avs">
-                                <rect key="frame" x="0.0" y="135" width="390" height="574"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9XV-ke-k44">
+                                <rect key="frame" x="75" y="358" width="240" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="rW2-7y-dkr">
-                                        <rect key="frame" x="20" y="49" width="350" height="43.666667938232422"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rW2-7y-dkr" id="aqw-7S-KqD">
-                                            <rect key="frame" x="0.0" y="0.0" width="350" height="43.666667938232422"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NLF-Hv-JEo">
+                                <rect key="frame" x="75" y="246" width="240" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="aad-Ci-1xv"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Settings" image="gear" catalog="system" id="dDk-BH-70h"/>
+                    <tabBarItem key="tabBarItem" title="Steps" image="folder" catalog="system" id="dDk-BH-70h"/>
                     <connections>
-                        <outlet property="theTable" destination="Qll-nR-avs" id="FEb-zG-jlS"/>
+                        <outlet property="actualSteps" destination="NLF-Hv-JEo" id="pGb-kw-LPu"/>
+                        <outlet property="steptrackImage" destination="9XV-ke-k44" id="3G1-5M-fYY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QXA-Le-z1J" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1733.8461538461538" y="143.60189573459715"/>
+            <point key="canvasLocation" x="1480" y="346.91943127962082"/>
         </scene>
-        <!--Steps-->
+        <!--Setting-->
         <scene sceneID="sCt-Bj-ydK">
             <objects>
                 <viewController id="JiV-Wz-9Ly" sceneMemberID="viewController">
@@ -222,7 +220,7 @@
                         <viewLayoutGuide key="safeArea" id="5sh-WM-ytr"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Steps" image="rosette" catalog="system" id="1Y2-6J-Svb"/>
+                    <tabBarItem key="tabBarItem" title="Setting" image="rosette" catalog="system" id="1Y2-6J-Svb"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ccq-pg-xlz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -249,7 +247,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="gear" catalog="system" width="128" height="119"/>
+        <image name="folder" catalog="system" width="128" height="97"/>
         <image name="list.dash.header.rectangle" catalog="system" width="128" height="93"/>
         <image name="liveligoods.png" width="240" height="214"/>
         <image name="rosette" catalog="system" width="106" height="128"/>
